<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingBottom="@dimen/_15sdp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            tools:text="¿Necesitas ayuda?"/>

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/dialog_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewMessage"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonCancelAction"
                android:layout_width="0dp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/background_circle_button_cancel"
                android:text="@string/dialog_button_cancel"
                android:theme="@style/RoundCancelButtonTheme" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirmAction"
                android:layout_width="0dp"
                android:layout_height="@dimen/_28sdp"
                android:layout_weight="1"
                android:background="@drawable/background_circle_button_ok"
                android:text="@string/dialog_button_accept"
                android:theme="@style/RoundOKButtonTheme"/>

        </LinearLayout>

    </RelativeLayout>

</layout>