<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cubo.app.features.login.LoginViewModel" />

        <variable
            name="isButtonLoading"
            type="Boolean" />
    </data>

    <FrameLayout
        android:id="@+id/frameLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.resetPassword.sendEmail.SendEmailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/textViewAppName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/purple_500"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewEmailLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/login_email_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_input"
                        android:ellipsize="end"
                        android:hint="@string/login_email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:paddingVertical="@dimen/_5sdp"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewEmailLabel"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/textViewPassLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/login_pass_label"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/background_input"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPassLabel"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/login_pass_hint"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLines="1"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_5sdp"
                            android:textColorHint="@color/black"
                            android:textSize="@dimen/_10ssp"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/login_button"
                        android:textSize="@dimen/_10ssp"
                        android:theme="@style/SquareButtonTheme"
                        app:isLoading="@{isButtonLoading}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</layout>